--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^9.16.0",
     "eslint-config-next": "^15.0.3",
     "framer-motion": "^11.14.4",
+    "howler": "^2.2.4",
     "input-otp": "^1.4.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.460.0",
@@ -53,6 +54,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/howler": "^2.2.12",
     "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
