--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "crypto-js": "^4.2.0",
     "eslint": "^9.16.0",
     "eslint-config-next": "^15.0.3",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.14.4",
     "howler": "^2.2.4",
+    "html-to-image": "^1.11.11",
     "input-otp": "^1.4.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.460.0",
@@ -56,6 +58,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
+    "@types/file-saver": "^2.0.7",
     "@types/howler": "^2.2.12",
     "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
