--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.59.19",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
+    "animated-fluent-emojis": "^0.1.2",
     "appwrite": "^16.0.2",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
