--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^6.0.0",
     "tsparticles": "^3.7.1",
     "zod": "^3.23.8"
   },
